# lowercase

./: .clang-format  .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  configure  configure.ac
m4/: NOTES
src/: changecase.in  main.c
