#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
m4_define([lowercase_VERSION], [1.0])
AC_INIT([lowercase],m4_defn([lowercase_VERSION]),[jellio320@duck.com],[lowercase], [https://github.com/Jellio320/lowercase])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MKDIR_P


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AM_INIT_AUTOMAKE([1.16 -Wall -Werror subdir-objects foreign])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
